--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "netlify-functions",
   "version": "1.0.0",
-  "description": "Test des fonctions Netlify",
+  "description": "Tests des fonctions Netlify",
   "main": "index.js",
   "scripts": {
-    "start": "node funcs/index.js"
+    "serve": "netlify-lambda serve src/funcs -c webpack.functions.js",
+    "build": "netlify-lambda build src/funcs -c webpack.functions.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,10 @@
   "homepage": "https://github.com/mendoc/netlify-functions#readme",
   "dependencies": {
     "firebase-admin": "^9.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "netlify-lambda": "^2.0.1",
+    "webpack-node-externals": "^2.5.1"
   }
 }
