--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/mendoc/netlify-functions#readme",
   "dependencies": {
     "firebase-admin": "^9.0.0",
-    "nodemailer": "^6.4.11"
+    "nodemailer": "^6.4.11",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
