--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/mendoc/netlify-functions#readme",
   "dependencies": {
+    "axios": "^0.23.0",
     "firebase-admin": "^9.0.0",
     "nodemailer": "^6.4.11",
     "uuid": "^8.3.0"
